@@ -671,18 +671,16 @@ class FFmpegWorker(Worker):
             ('-b:v', '%sk' % bitrate),
             ('-minrate', '%sk' % bitrate),
             ('-maxrate', '%sk' % bitrate),
-            ('-bufsize', 36408333),
+            ('-bufsize', 17825792),
+            ('-rc_init_occupancy', 17825792),
+            ('-sc_threshold', 1000000000),
             ('-bf', 2),
             ('-g', gop_size),
-            ('-flags2', 'sgop'),
             ('-intra_vlc', 1),
             ('-non_linear_quant', 1),
-            ('-qdiff', 0.5),
             ('-dc', 10),
             ('-qmin', 1),
             ('-qmax', 12),
-            ('-lmin', '1*QP2LAMBDA'),
-            ('-rc_max_vbv_use', 1),
             ('-s', '1920x1080'),
         ]
 
