@@ -14,6 +14,7 @@ Version 0.7.0~dev
 	* Read fps value from ffmpeg output.
 	* Support BMX muxer.
 	* Handle interlaced option in XDCAMHD transcoding profile.
+	* Update XDCAMHD transcoding profile options in ffmpeg worker.
 
 Version 0.6.0 Released on 2012/08/06
 
